# agent-signal

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/agent_signal/: __init__.py  bus.py  decorators.py  registry.py  signal.py
src/agent_signal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bus.py  test_decorators.py  test_registry.py  test_signal.py
