[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-signal"
version = "1.0.0"
description = "Event signaling and pub/sub for agent coordination"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["agents", "events", "signals", "pub-sub", "coordination", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-signal"
Repository = "https://github.com/darshjme-codes/agent-signal"
Issues = "https://github.com/darshjme-codes/agent-signal/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = true
